--- a/src/translations/en.yml
+++ b/src/translations/en.yml
@@ -7,6 +7,7 @@ consentModal:
     text: >
       To learn more, please read our {privacyPolicy}.
 consentNotice:
+  title: Information that we collect
   changeDescription: There were changes since your last visit, please update your consent.
   description: >
     We collect and process your personal information for the following purposes: {purposes}.
